# libmongo-client

./: TODO  configure.ac
src/: Makefile.am  bson.c  libmongo-client.ver  libmongo-macros.h  libmongo-private.h  mongo-client.c  mongo-client.h  mongo-ssl.c  mongo-ssl.h  mongo-sync-pool.c  mongo-sync-pool.h  mongo-sync.c  mongo-sync.h
tests/: Makefile.am  README
tests/func/mongo/sync/: f_ssl.c  f_sync_auto_reconnect_cache.c  f_sync_safe_mode_cache.c
tests/func/mongo/sync-pool/: f_sync_pool.c
tests/libtap/: test.c  test.h
tests/ssl/: env_setup
tests/ssl/3party/: .gitignore  0A.pem  0B.pem  Makefile.am  ca.conf  ca.pem  ca_crl.der  ca_crl.pem  ca_privkey.pem  certindex  certindex.old  client.csr  client.key  client_full.pem  generate.sh  privkey.pem  revoke.sh  server.csr  server.key  server_full.pem
tests/ssl/certs/: client-cert.crt  client-cert.key  client.pem  mongodb-cert-sni-mismatch.crt  mongodb-cert-sni-mismatch.key  mongodb-cert.crt  mongodb-cert.key  mongodb-sni-mismatch.pem  mongodb.pem
tests/unit/mongo/client/: connect_ssl.c  packet_recv_ssl.c  packet_send_ssl.c
tests/unit/mongo/ssl/: ssl_complex.c  ssl_ctx.c
tests/unit/mongo/sync/: sync_cmd_authenticate_cache.c  sync_cmd_insert_ssl.c  sync_cmd_ping_ssl.c  sync_conn_seed_add_cache.c  sync_connect_cache.c  sync_connect_cache_ssl.c  sync_connect_from_cache_enforce_primary.c  sync_reconnect_ssl.c  sync_ssl_complex.c
tests/unit/mongo/sync-pool/: sync_pool_new.c
